src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwF1000-dhP0.5-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: F1000\ndefault window height: P0.5\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]

post-map configures:
size: 1000 × 328, bounds: 1231 × 680, states: []
size: 1000 × 328, bounds: 1231 × 680, states: [Activated]
